tests/duarouter/flows/errors/vehicle_false_departlane/errors.duarouter
Error: Invalid departLane definition for flow '0';
 must be one of ("random", "free", "allowed", "best", "first", or an int>=0)
Quitting (on error).
